[Update] Change labels Japanese: Main Page: Main Functions. 音声認識◯◯ -> マイク入力, 聞き取り. and change some labels.

--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -29,8 +29,8 @@ common_warning:
 
 main_page:
     translation: "翻訳"
-    transcription_send: "音声認識 マイク"
-    transcription_receive: "音声認識 スピーカー"
+    transcription_send: "マイク入力"
+    transcription_receive: "聞き取り"
     foreground: "最前面固定"
 
     language_settings: "言語設定"
@@ -134,7 +134,7 @@ config_page:
         ctranslate2_compute_device:
             label: "AI翻訳 {{ctranslate2}} の処理デバイス"
         deepl_auth_key:
-            label: "DeepL API 認証キー"
+            label: "DeepL APIキーの登録"
             desc: "使用の際は、メイン画面にある {{translator}} をDeepL_APIに変更してください。\n※対応していない言語もあります。"
             open_auth_key_webpage: "DeepLアカウントページを開く"
             save: "保存"
