[Update/bugfix] Notification UI: Adjust an animation. Add localizations. Fix stack behavior that was not updated correctly. (it still has an issue tho.)

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -269,6 +269,9 @@ config_page:
         websocket_port:
             label: "WebSocket Port"
 
+    notifications:
+        save_success: "Settings have been saved"
+
 plugin_notifications:
     downloading: Downloading the plugin.
     downloaded_success: Downloaded successfully.
