--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -243,7 +243,7 @@ config_page:
                 title: "設定"
                 original: "原文"
                 translated: "翻訳"
-                for_multi_translation: 多言語翻訳用
+                for_multi_translation: "多言語翻訳用"
         send_message_format:
             label: メッセージフォーマット（送信）
             desc: VRChatで相手に実際に見えるフォーマットを変更できます。
@@ -293,16 +293,16 @@ config_page:
         save_success: "設定を保存しました。"
 
 plugin_notifications:
-    downloading: プラグインをダウンロード中。
-    downloaded_success: プラグインのダウンロードが完了しました。
-    downloaded_error: プラグインのダウンロードに失敗しました。
+    downloading: "プラグインをダウンロード中。"
+    downloaded_success: "プラグインのダウンロードが完了しました。"
+    downloaded_error: "プラグインのダウンロードに失敗しました。"
 
-    updating: プラグインをアップデート中。
-    updated_success: プラグインのアップデートが完了しました。
-    updated_error: プラグインのアップデートに失敗しました。
+    updating: "プラグインをアップデート中。"
+    updated_success: "プラグインのアップデートが完了しました。"
+    updated_error: "プラグインのアップデートに失敗しました。"
 
-    disabled_out_of_support: 現在のバージョンとの互換性がありません。プラグインを無効にしました。
-    disabled_due_to_an_error: プラグイン実行中にエラーを検知しました。プラグイン開発者に報告してください。
+    disabled_out_of_support: "現在のバージョンとの互換性がありません。プラグインを無効にしました。"
+    disabled_due_to_an_error: "プラグイン実行中にエラーを検知しました。プラグイン開発者に報告してください。"
 
-    is_enabled: プラグインを有効にしました。
-    is_disabled: プラグインを無効にしました。
+    is_enabled: "プラグインを有効にしました。"
+    is_disabled: "プラグインを無効にしました。"
